[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
log = "0.4"
leptos = { git = "https://github.com/leptos-rs/leptos.git" }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
